# grepkin

./: .dockerignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  Dockerfile  Makefile  README.md
features/: match_features_test.feature
src/: compare.rs  generate.rs  lib.rs  main.rs  parse.rs
src/templates/: py_test.py  rust_test.rs
tests/: test_match_reference_to_test.rs
