[package]
name = "gherkin_testcomments"
description = "Extract Gherkin Scenarios written as comments in test files"
version = "0.1.0"
authors = ["Jb DOYON <jb@jiby.tech>"]
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
gherkin = {version = "0.11", features = ["serde", "parser"]}
regex = "1"
