[package]
name = "gherkin_testcomments"
description = "Extract Gherkin Scenarios written as comments in test files"
version = "0.1.0"
authors = ["Jb DOYON <jb@jiby.tech>"]
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
gherkin = {version = "0.11", features = ["serde", "parser"]}
regex = "1"
globwalk = "0.8.1"

[lib]
name = "grepkin"
path = "src/lib.rs"

[[bin]]
name = "grepkin_bin"
path = "src/main.rs"
